  ! as soon as the next release of GnuCash is out (2.0.0)                !
  ------------------------------------------------------------------------


===========================================================================
MARK: released gwenhywfar-2.0.0 (2006/02/27)
===========================================================================


2006/02/24: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- mklistdoc now recognizes const list macros as well


2006-02-17   Christian Stimming <stimming@tuhh.de>

	* configure.ac: Use AC_CONFIG_HEADERS, not HEADER, in according to
	autoconf docs.


2006/02/15: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added functions GWEN_CryptToken_GetMatchingContexts() and 
  GWEN_CryptToken_FindContextInList(). This very much simplifies working with
  crypt tokens.
- adapted "ohbci" crypt token context description to the latest changes


2006/02/14: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- removed debug messages in ct_file.c


2006-02-10   Christian Stimming <stimming@tuhh.de>

	* src/base/buffer.h, list.h: Improved documentation.


2006/02/10: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- finally fixed the spurious signature bug which sometimes caused HBCI
  signatures to be invalid


2006/02/09: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- added function GWEN_NetLayer_WaitForStatus()
- fixed two bugs in PKCS1 padding


2006/02/07: Martin Preuss<martin@libchipcard.de>
-------------------------------------------------
- declare GWEN_Random() public


===========================================================================
MARK: released gwenhywfar-1.99.7 (2006/02/06)
===========================================================================


2006/02/06: Martin Preuss<martin@libchipcard.de>