@@ -8,6 +8,10 @@
 MARK: released gwenhywfar-2.0.0 (2006/02/27)
 ===========================================================================
 
+2006/03/02: Martin Preuss<martin@libchipcard.de>
+-------------------------------------------------
+- fixed a bug in waitcallback code
+
 
 2006/02/24: Martin Preuss<martin@libchipcard.de>
 -------------------------------------------------
